<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeNewTodoActivity">

    <EditText
        android:id="@+id/editTextTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_for_theme_edt"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextExtraDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:autofillHints=""
        android:gravity="start|top"
        android:hint="@string/hint_to_extra_desc"
        android:inputType="textMultiLine"
        android:lines="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTheme" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:text="@string/delete_btn"
        android:textSize="14sp"
        android:background="@drawable/oval_button"
        android:onClick="onClickDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/oval_button"
        android:text="@string/add_btn"
        android:textSize="27sp"
        android:onClick="onClickAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>