<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="600dp"
    android:background="@drawable/layout_border"
    >

    <TextView
        android:id="@+id/havent_todo_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/havent_todo_txt"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_margin="40dp"
        android:background="@drawable/oval_button"
        android:textSize="27sp"
        android:text="@string/add_new_todo_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/read_from_file_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/read_from_file_btn"
        android:onClick="onClickReadFromFile"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>